# text_affinity

./: Dockerfile  Untitled.ipynb  bk_pyproject.toml  container_start.sh  docker_shell_script.sh  environment.yml  pyproject.toml  sample_request_body.json  wmd_experiment.ipynb
compute/: computation_engine.py  compute_avg_wordembedding_affinity.py  compute_sentence_transformer_affinity.py  compute_spacy_affinity.py  compute_tfidf_affinity.py  compute_use_affinity.py  compute_weighted_tfidf_affinity.py  compute_wmd_gensim_affinity.py
configuration/: general_config.yaml  general_config_docker.yaml  general_config_mac.yaml  general_config_ubuntu.yaml
stopwords/: stopwords_list.csv
tests/: test_text_affinity.py
text_affinity/: flask_app.py  main.py
utils/general/: common.py  preprocessing.py
utils/logger/: logger.py
utils/storage/: check_path_exist.py
webapp/: text_affinity_api.py
