[tool.poetry]
name = "text_affinity"
version = "0.1.0"
description = ""
authors = ["tkhan3 <khantanveera@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"    
PyYAML = "^5.4.1"
pandas = "^1.3.3"
spacy = "^3.1.3"
wmd = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
